2008-01-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-headers.c (soup_message_headers_get):
	Renamed from soup_message_headers_find, and with new behavior; now
	multiple headers with the same name are automatically merged
	together into a single comma-separated value, to ensure that apps
	treat multivalued headers the same regardless of how upstream
	servers generate them.
	(soup_message_headers_find_nth): no longer needed/wanted

	* libsoup/soup-auth-manager.c: Update to deal with
	SoupMessageHeaders change. (Ugh.)

	* tests/header-parsing.c: Update multiple-values test, and undo a
	change that mistakenly got committed while debugging something
	earlier.

2008-01-01  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager.c:
	* libsoup/soup-dns.c: 
	* libsoup/soup-gnutls.c: 
	* libsoup/soup-message.c: 
	* libsoup/soup-message-io.c: 
	* libsoup/soup-message-queue.c: 
	* libsoup/soup-misc.c: 
	* libsoup/soup-path-map.c: 
	* libsoup/soup-server.c: 
	* libsoup/soup-session.c: 
	* libsoup/soup-session-sync.c: 
	* libsoup/soup-socket.c: Use g_slice.

2008-01-01  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (soup_session_cancel_message): add a
	"status_code" argument rather than having the caller set the
	status code separately, to prevent a race condition.

2008-01-01  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (soup_session_queue_message): change the
	callback type to include the SoupSession as a parameter as well.

	* *.c: update

2007-12-31  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (soup_session_class_init): change
	the "authenticate" signal to include a SoupAuth rather than its
	components, and to have a "retrying" parameter rather than
	separating "authenticate" and "reauthenticate".

	* libsoup/soup-connection.c (soup_connection_class_init): Likewise

	* libsoup/soup-auth-manager.c (authenticate_auth): update

	* libsoup/soup-auth.c: make various attributes into gobject
	properties.