@@ -1,5 +1,17 @@
 2008-01-02  Dan Winship  <danw@gnome.org>
 
+	* libsoup/soup-message-body.c (soup_message_body_get_length)
+	(soup_message_body_get_chunk): Use goffset rather than gsize for
+	references to the entire size of the message body. (SoupBuffer
+	still uses gsize, so individual chunks can only be G_MAXSIZE
+	long.)
+	
+	* libsoup/soup-message-headers.c
+	(soup_message_headers_get_content_length):
+	(soup_message_headers_set_content_length): Likewise, use goffset.
+
+2008-01-02  Dan Winship  <danw@gnome.org>
+
 	* libsoup/soup-message-headers.c (soup_message_headers_get):
 	Renamed from soup_message_headers_find, and with new behavior; now
 	multiple headers with the same name are automatically merged
